Fixed bug where same country could be added multiple times to single submission.

--- a/app/static/templates/match_submission.html
+++ b/app/static/templates/match_submission.html
@@ -11,6 +11,10 @@
         <strong>Error!</strong><span> You must add match participants.</span>
       </div>
 
+      <div id="duplicate-country" class="alert alert-danger" style="display:none;">
+        <strong>Error!</strong><span> You can only add each participant once.</span>
+      </div>
+
       <form role="form">
 
         <div class="row">
@@ -128,7 +132,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" id="submit-pair">Save changes</button>
+        <button type="button" class="btn btn-primary" id="submit-pair">Add</button>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
