Added white space to bottom of games and countries views.

--- a/app/static/templates/games_master_detail.html
+++ b/app/static/templates/games_master_detail.html
@@ -34,7 +34,7 @@
       
     </tr>
     <% }); %>
-  </table>
+  </table><br><br>
   <% } else { %>
   <div class="row">
     <div class="col-md-8" id="detail">
