--- a/app/static/templates/countries_master_detail.html
+++ b/app/static/templates/countries_master_detail.html
@@ -24,7 +24,7 @@
       </td>
     </tr>
     <% }); %>
-  </table>
+  </table><br><br>
   <% } else { %>
   <div class="row">
     <div class="col-md-8" id="detail">
