Added Strawberita rule.

--- a/app/static/templates/rules.html
+++ b/app/static/templates/rules.html
@@ -27,6 +27,7 @@
           <p><span style="font-weight:600;">Being Social</span> - Each participant will be given an index card at the start of the Games.  Then, throughout the day, they should write down the names of every unique person they play a board game with.  Participants will be awarded 1 bonus point for each name on their card.</p>
           <p><span style="font-weight:600;">Trying New Things</span> - Each participant shall be awarded 5 bonus points for playing a game that they have never played before.  This is a one-time bonus.</p>
           <p><span style="font-weight:600;">Surviving Long Games</span> - Participants will earn 1 bonus point for each half hour they survive in a game beyond the first.  For example, lasting an hour into a game will earn the player a point. Lasting an hour and a half will earn them 2 points.  And so forth.</p>
+          <p><span style="font-weight:600;">Drinking Strawberitas</span> - There have been a number of Strawberitas left in the fridge since a prior event. They do not taste good. Whoever drinks them shall receive 1 bonus point per Strawberita drunk. Please clear them out of the fridge.</p>
         </div>
       </div>
       <div class="page-header">
