Added modified index.html.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,6 +38,7 @@
     <script type="text/javascript" src="static/js/app/views/countries.js"></script>
     <script type="text/javascript" src="static/js/app/views/scoreboard.js"></script>
     <script type="text/javascript" src="static/js/app/views/rules.js"></script>
+    <script type="text/javascript" src="static/js/app/views/matches.js"></script>
     <script type="text/javascript" src="static/js/app/views/match_submission.js"></script>
 
     <script type="text/javascript" src="static/js/router.js"></script>
@@ -65,6 +66,7 @@
           <li><a href="#countries">Countries</a></li>
           <li><a href="#scoreboard">Scoreboard</a></li>
           <li><a href="#rules">Rules</a></li>
+          <li><a href="#matches">Matches</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#match_submission">Submit Match Result</a></li>
