--- a/app/static/templates/games_master_detail.html
+++ b/app/static/templates/games_master_detail.html
@@ -4,7 +4,7 @@
     <h1>Games</h1>
   </div>
   <table class="table table-hover">
-    <% _.each(gameList, function(game) { %>
+    <% _.each(_.sortBy(gameList, function(game) { return game.name; }), function(game) { %>
     <tr class="game-selector" game_id="<%= game.attributes.id %>">
       <td class="col-md-1 hidden-xs" style="vertical-align:middle; height:<%= imgCellHeight %>px;" id="img-cell">
         <img src="<%= game.attributes.icon %>" class="img-rounded img-responsive">
@@ -107,7 +107,7 @@
                       <th class="col-md-4">Representative</th>
                       <th class="col-md-3">Points</th>
                     </tr>
-                    <% _.each(game.attributes.countries, function(country) { %>
+                    <% _.each(_.sortBy(match.attributes.countries, function(country) { return country.place; }), function(country) { %>
                     <tr>
                       <td><%= country.place %></td>
                       <td><%= country.country %></td>
@@ -124,7 +124,7 @@
                   <th class="col-md-7">Country</th>
                   <th class="col-md-3">Points</th>
                 </tr>
-                <% _.each(game.attributes.countries, function(country) { %>
+                <% _.each(_.sortBy(match.attributes.countries, function(country) { return country.place; }), function(country) { %>
                 <tr>
                   <td><%= country.place %></td>
                   <td><%= country.country %></td>
@@ -141,7 +141,7 @@
     </div>
     <div class="col-md-4">
       <div class="list-group">
-        <% _.each(gameList, function(game) { %>
+        <% _.each(_.sortBy(gameList, function(game) { return game.name; }), function(game) { %>
         <%   if (game.attributes.id == selectedGame.attributes.id) { %>
         <a href="#games/<%= game.attributes.id %>" class="list-group-item active"><%= game.attributes.name %></a>
         <% } else { %>
