Attempting to sort the games list

--- a/app/static/templates/games_master_detail.html
+++ b/app/static/templates/games_master_detail.html
@@ -107,7 +107,7 @@
                       <th class="col-md-4">Representative</th>
                       <th class="col-md-3">Points</th>
                     </tr>
-                    <% _.each(_.sortBy(match.attributes.countries, function(country) { return country.place; }), function(country) { %>
+                    <% _.each(_.sortBy(game.attributes.countries, function(country) { return country.place; }), function(country) { %>
                     <tr>
                       <td><%= country.place %></td>
                       <td><%= country.country %></td>
@@ -124,7 +124,7 @@
                   <th class="col-md-7">Country</th>
                   <th class="col-md-3">Points</th>
                 </tr>
-                <% _.each(_.sortBy(match.attributes.countries, function(country) { return country.place; }), function(country) { %>
+                <% _.each(_.sortBy(game.attributes.countries, function(country) { return country.place; }), function(country) { %>
                 <tr>
                   <td><%= country.place %></td>
                   <td><%= country.country %></td>
