--- a/app/static/templates/countries_master_detail.html
+++ b/app/static/templates/countries_master_detail.html
@@ -4,7 +4,7 @@
     <h1>Countries</h1>
   </div>
   <table class="table table-hover selection-table">
-    <% _.each(countryList, function(country) { %>
+    <% _.each(_.sortBy(countryList, function(game) { return country.attributes.name; }), function(country) { %>
     <tr class="country-selector" country_id="<%= country.attributes.id %>">
       <td class="col-md-1 hidden-xs" style="vertical-align:middle; height:<%= imgCellHeight %>px;" id="img-cell">
         <img src="<%= country.attributes.icon %>" class="img-rounded img-responsive">
@@ -103,7 +103,7 @@
       <% } else { %>
       <div class="panel-group" id="accordion">
         <% var count = 0 %>
-        <% _.each(game_log, function(game) { %>
+        <% _.each(_.sortBy(gameList, function(game) { return game.attributes.id; }), function(game) { %>
         <%   var standing = game.get_standing_by_country(selectedCountry.attributes.id); %>
         <%   var game_name = gameList.get_name_by_id(game.attributes.gameId); %>
         <%   var game_img = gameList.get_img_by_id(game.attributes.gameId); %>
@@ -143,7 +143,7 @@
                       <th class="col-md-4">Representative</th>
                       <th class="col-md-3">Points</th>
                     </tr>
-                    <% _.each(game.attributes.countries, function(country) { %>
+                    <% _.each(_.sortBy(game.attributes.countries, function(country) { return country.place; }), function(country) { %>
                     <tr>
                       <td><%= country.place %></td>
                       <td><%= country.country %></td>
@@ -160,7 +160,7 @@
                   <th class="col-md-7">Country</th>
                   <th class="col-md-3">Points</th>
                 </tr>
-                <% _.each(game.attributes.countries, function(country) { %>
+                <% _.each(_.sortBy(game.attributes.countries, function(country) { return country.place; }), function(country) { %>
                 <tr>
                   <td><%= country.place %></td>
                   <td><%= country.country %></td>
@@ -177,7 +177,7 @@
     </div>
     <div class="col-md-4">
       <div class="list-group">
-        <% _.each(countryList, function(country) { %>
+        <% _.each(_.sortBy(countryList, function(country) { return country.attributes.name; }), function(country) { %>
         <% if (country.attributes.id == selectedCountry.attributes.id) { %>
         <a href="#countries/<%= country.attributes.id %>" class="list-group-item active"><%= country.attributes.name %></a>
         <% } else { %>
