--- a/app/static/templates/countries_master_detail.html
+++ b/app/static/templates/countries_master_detail.html
@@ -143,6 +143,7 @@
                       <th class="col-md-4">Representative</th>
                       <th class="col-md-3">Points</th>
                     </tr>
+                    <% console.log('game',game); %>
                     <% _.each(_.sortBy(game.attributes.countries, function(country) {return country.place;}), function(country) { %>
                     <tr>
                       <td><%= country.place %></td>
