--- a/app/static/templates/countries_master_detail.html
+++ b/app/static/templates/countries_master_detail.html
@@ -146,7 +146,7 @@
                     <% console.log('game',game); %>
                     <% var sorted_games = _.sortBy(game.attributes.countries, function(country) {return country.place;}); %>
                     <% console.log('game-sorted',sorted_games); %>
-                    <% _.each(sorted_games, function(country) { %>
+                    <% _.each(_.sortBy(game.attributes.countries, function(country) {return country.place;}), function(country) { %>
                     <tr>
                       <td><%= country.place %></td>
                       <td><%= country.country %></td>
