--- a/app/static/templates/countries_master_detail.html
+++ b/app/static/templates/countries_master_detail.html
@@ -4,7 +4,7 @@
     <h1>Countries</h1>
   </div>
   <table class="table table-hover selection-table">
-    <% _.each(_.sortBy(countryList, function(country) {return country.attributes.place;}), function(country) { %>
+    <% _.each(_.sortBy(countryList, function(country) {return country.attributes.name;}), function(country) { %>
     <tr class="country-selector" country_id="<%= country.attributes.id %>">
       <td class="col-md-1 hidden-xs" style="vertical-align:middle; height:<%= imgCellHeight %>px;" id="img-cell">
         <img src="<%= country.attributes.icon %>" class="img-rounded img-responsive">
