--- a/app/static/templates/countries_master_detail.html
+++ b/app/static/templates/countries_master_detail.html
@@ -177,7 +177,7 @@
     </div>
     <div class="col-md-4">
       <div class="list-group">
-        <% _.each(countryList, function(country) { %>
+        <% _.each(_.sortBy(countryList, function(country) {return country.attributes.name;}), function(country) { %>
         <% if (country.attributes.id == selectedCountry.attributes.id) { %>
         <a href="#countries/<%= country.attributes.id %>" class="list-group-item active"><%= country.attributes.name %></a>
         <% } else { %>
