Fixed adding countries

--- a/app/templates/add_country.html
+++ b/app/templates/add_country.html
@@ -4,7 +4,7 @@
     <title>Board Game Olympics</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -14,35 +14,9 @@
     <![endif]-->
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="static/js/libs/jquery/jquery.min.js"></script>
+    <script src="/static/js/libs/jquery/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="static/js/libs/bootstrap/bootstrap.min.js"></script>
-    <script src="static/js/libs/underscore/underscore.min.js"></script>
-    <script src="static/js/libs/backbone/backbone.min.js"></script>
-    <script src="static/js/libs/backbone/backbone-mediator.js"></script>
-
-    <script type="text/javascript" src="static/js/libs/helper.js"></script>
-        
-    <script type="text/javascript" src="static/js/app/models/game.js"></script>
-    <script type="text/javascript" src="static/js/app/models/country.js"></script>
-    <script type="text/javascript" src="static/js/app/models/standing.js"></script>
-    <script type="text/javascript" src="static/js/app/models/match.js"></script>
-
-    <script type="text/javascript" src="static/js/app/collections/games.js"></script>
-    <script type="text/javascript" src="static/js/app/collections/countries.js"></script>
-    <script type="text/javascript" src="static/js/app/collections/standings.js"></script>
-    <script type="text/javascript" src="static/js/app/collections/matches.js"></script>
-
-    <script type="text/javascript" src="static/js/app/views/landing.js"></script>
-    <script type="text/javascript" src="static/js/app/views/games.js"></script>
-    <script type="text/javascript" src="static/js/app/views/countries.js"></script>
-    <script type="text/javascript" src="static/js/app/views/scoreboard.js"></script>
-    <script type="text/javascript" src="static/js/app/views/rules.js"></script>
-    <script type="text/javascript" src="static/js/app/views/matches.js"></script>
-    <script type="text/javascript" src="static/js/app/views/match_submission.js"></script>
-
-    <script type="text/javascript" src="static/js/router.js"></script>
-    <script type="text/javascript" src="static/js/app.js"></script>
+    <script src="/static/js/libs/bootstrap/bootstrap.min.js"></script>
   </head>
   
   
