fixed links on add country page

--- a/app/templates/add_country.html
+++ b/app/templates/add_country.html
@@ -30,20 +30,20 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="">Board Game Olympics</a>
+        <a class="navbar-brand" href="/">Board Game Olympics</a>
       </div>
     
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="#games">Games</a></li>
-          <li><a href="#countries">Countries</a></li>
-          <li><a href="#scoreboard">Scoreboard</a></li>
-          <li><a href="#rules">Rules</a></li>
-          <li><a href="#matches">Matches</a></li>
+          <li><a href="/#games">Games</a></li>
+          <li><a href="/#countries">Countries</a></li>
+          <li><a href="/#scoreboard">Scoreboard</a></li>
+          <li><a href="/#rules">Rules</a></li>
+          <li><a href="/#matches">Matches</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#match_submission">Submit Match Result</a></li>
+          <li><a href="/#match_submission">Submit Match Result</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </nav>
