--- a/app/templates/add_game.html
+++ b/app/templates/add_game.html
@@ -51,23 +51,23 @@
     <div id="main">
       <div class="container">
         <form role="form" action="" method="POST" enctype="multipart/form-data" class="form-horizontal">
-              <label for="comments" class="col-sm-2 control-label">Game Name<br></label>
+              <label for="game_name" class="col-sm-2 control-label">Game Name<br></label>
               <div class="col-sm-5">
                   <input class="form-control" id="game_name" name="game_name"></input>
               </div>
-              <label for="comments" class="col-sm-2 control-label">Points<br></label>
+              <label for="points" class="col-sm-2 control-label">Points<br></label>
               <div class="col-sm-5">
                   <input class="form-control" id="points" name="points"></input>
               </div>
-              <label for="comments" class="col-sm-2 control-label">Min Players<br></label>
+              <label for="min_players" class="col-sm-2 control-label">Min Players<br></label>
               <div class="col-sm-5">
                   <input class="form-control" id="min_players" name="min_players"></input>
               </div>
-              <label for="comments" class="col-sm-2 control-label">Max Players<br></label>
+              <label for="max_players" class="col-sm-2 control-label">Max Players<br></label>
               <div class="col-sm-5">
                   <input class="form-control" id="max_players" name="max_players"></input>
               </div>
-              <label for="comments" class="col-sm-2 control-label">Coop<br></label>
+              <label for="coop" class="col-sm-2 control-label">Coop<br></label>
               <div class="col-sm-5">
                   <checkbox class="form-control" id="coop" name="coop"></checkbox>
               </div>
