--- a/app/templates/add_game.html
+++ b/app/templates/add_game.html
@@ -69,7 +69,7 @@
               </div>
               <div class="input-group">
                 <label for="coop" class="col-sm-2 control-label">Coop<br></label>
-                <checkbox class="form-control" id="coop" name="coop"></checkbox>
+                <input type="checkbox" id="coop" name="coop"></checkbox>
               </div>
             <input class="btn btn-primary" type="submit" value="Add Country">
         </form>
