--- a/app/templates/add_game.html
+++ b/app/templates/add_game.html
@@ -53,18 +53,18 @@
         <form role="form" action="" method="POST" enctype="multipart/form-data" class="form-horizontal">
               <div class="input-group">
                 <label for="game_name" class="control-label">Game Name<br></label>
-                <input class="form-control" id="game_name" name="game_name"></input>
+                <input id="game_name" name="game_name"></input>
               
-                <label for="points" class="col-sm-2 control-label">Points<br></label>
-                <input class="form-control" id="points" name="points"></input>
+                <label for="points" class="control-label">Points<br></label>
+                <input id="points" name="points"></input>
               
-                <label for="min_players" class="col-sm-2 control-label">Min Players<br></label>
-                <input class="form-control" id="min_players" name="min_players"></input>
+                <label for="min_players" class="control-label">Min Players<br></label>
+                <input id="min_players" name="min_players"></input>
               
-                <label for="max_players" class="col-sm-2 control-label">Max Players<br></label>
-                <input class="form-control" id="max_players" name="max_players"></input>
+                <label for="max_players" class="control-label">Max Players<br></label>
+                <input id="max_players" name="max_players"></input>
               
-                <label for="coop" class="col-sm-2 control-label">Coop<br></label>
+                <label for="coop" class="control-label">Coop<br></label>
                 <input type="checkbox" id="coop" name="coop"></checkbox>
               </div>
             <input class="btn btn-primary" type="submit" value="Add Country">
