--- a/app/templates/add_game.html
+++ b/app/templates/add_game.html
@@ -52,22 +52,22 @@
       <div class="container">
         <form role="form" action="" method="POST" enctype="multipart/form-data" class="form-horizontal">
               <div class="input-group">
-                <label for="game_name" class="control-label">Game Name<br></label>
+                <label for="game_name" class="control-label">Game Name </label>
                 <input id="game_name" name="game_name"></input>
                 <br>
-                
-                <label for="points" class="control-label">Points<br></label>
+
+                <label for="points" class="control-label">Points </label>
                 <input id="points" name="points"></input>
                 <br>
-                
-                <label for="min_players" class="control-label">Min Players<br></label>
+
+                <label for="min_players" class="control-label">Min Players </label>
                 <input id="min_players" name="min_players"></input>
                 <br>
-                
-                <label for="max_players" class="control-label">Max Players<br></label>
+
+                <label for="max_players" class="control-label">Max Players </label>
                 <input id="max_players" name="max_players"></input>
                 <br>
-                
+
                 <label for="coop" class="control-label">Coop<br></label>
                 <input type="checkbox" id="coop" name="coop"></checkbox>
               </div>
