--- a/app/templates/add_game.html
+++ b/app/templates/add_game.html
@@ -51,7 +51,7 @@
     <div id="main">
       <div class="container">
         <form role="form" action="" method="POST" enctype="multipart/form-data" class="form-horizontal">
-              <div class="input-group">
+              <div class="form-group">
                 <label for="game_name" class="control-label">Game Name </label>
                 <input id="game_name" name="game_name"></input>
                 <br>
@@ -71,7 +71,7 @@
                 <label for="coop" class="control-label">Coop<br></label>
                 <input type="checkbox" id="coop" name="coop"></checkbox>
               </div>
-            <input class="btn btn-primary" type="submit" value="Add Country">
+            <input class="btn btn-primary" type="submit" value="Add Game">
         </form>
       </div>
     </div>
