Fixed game add code

--- a/app/templates/add_game.html
+++ b/app/templates/add_game.html
@@ -50,7 +50,7 @@
     
     <div id="main">
       <div class="container">
-        <form role="form" action="" method="POST" enctype="multipart/form-data" class="form-horizontal">
+        <form role="form" action="" method="POST">
               <div class="form-group">
                 <label for="game_name" class="control-label">Game Name </label>
                 <input id="game_name" name="game_name"></input>
